--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 
     <script src="/javascript/levels.js"></script>
     <script src="/javascript/map.js"></script>
-    <script src="/javascript/move.js
-    
-    
-    "></script>
+    <script src="/javascript/move.js"></script>
 </body>
 
 </html>
